fix contrast launchpad

--- a/packages/ndla-ui/src/ResourceGroup/component.topic-resource.scss
+++ b/packages/ndla-ui/src/ResourceGroup/component.topic-resource.scss
@@ -34,7 +34,7 @@
 
 .c-topic-resource__link {
   display: flex;
-  color: $brand-color;
+  color: $brand-color--dark;
 
   h1 {
     box-shadow: $link;
